kubernetes/namespace/build/argocd/ui-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-ingress
  namespace: build
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.bitmemo.io`)
      kind: Rule
      middlewares:
        - name: basicauth
          namespace: app
      services:
        - name: argocd-server
          port: 80
  tls: {}
